fixed style sidebar active menu item overflow

--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ main .container .left .profile {
   margin-top: 1rem;
   background: var(--color-white);
   border-radius: var(--card-border-radius);
+  overflow: hidden;
 }
 
 .left .sidebar .menu-item {
@@ -201,10 +202,29 @@ main .container .left .profile {
 }
 
 .left .sidebar .active {
-    background: var(--color-light);
+  background: var(--color-light);
+}
+
+.left .sidebar .active i,
+.left .sidebar .active h3 {
+  color: var(--color-primary);
+}
+
+.left .sidebar .active::before {
+  content: "";
+  display: block;
+  width: 0.5rem;
+  height: 100%;
+  position: absolute;
+  background: var(--color-primary);
+}
+
+/* .left .sidebar .menu-item:first-child.active {
+   border-top-left-radius: var(--card-border-radius);
+   overflow: hidden; 
   }
-  
-  .left .sidebar .active i,
-  .left .sidebar .active h3 {
-    color: var(--color-primary);
-  }
+
+  .left .sidebar .menu-item:last-child .active {
+    border-bottom-left-radius:var(--card-border-radius);
+    overflow: hidden; 
+   } REPLACED WITH OVERFLOW HIDDEN IN THE SIDEBAR STYLE */
